# langeval

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build.yml
src/langeval/: __init__.py  _decorator.py  test_case.py
src/langeval/error/: __init__.py
src/langeval/eval/: base.py  langchain.py
src/langeval/model/: __init__.py
src/langval/: eval.py  prompt.py  utils.py
src/langval/error/: __init__.py
src/langval/eval/: base.py  langchain.py
src/langval/model/: __init__.py
src/langval/tools/: __init__.py
tests/: test_eval.py
